# reflectance-datacube-processor

./: .env.sample  .gitignore  1. Prerequisite.md  1.Introduction.md  1.intro.md  2. Prerequisite.md  2. Provisioning.md  3. AWS ECS Deployment.md  3. Provisioning.md  4. AWS ECS Deployment.md  4. Deployment.md  4.Lifecycle_management.md  5. AWS ECS FTR.md  5. User guide.md  6. User guide.md  6.Lifecycle_management.md  7. AWS ECS FTR.md  7.Release-notes.md  8.Release-notes.md  API_commands.txt  Deployment.md  Dockerfile  Dockerfile_ECS  Dockerfile_lambda  ECS_deploy_Service_yml.txt  Introduction.md  Lifecycle_management.md  Prerequisite.md  Provisioning.md  README.md  Reflectance_p;rocesor.md  Reflectance_processor.md  Release-notes.md  User guide.md  _config.yml  byoa.toml  docker-entrypoint.sh  environment.yml  pyproject.toml  readme.md  (+3 more)
.github/: AWS_deploy.yml
.github/actions/: Deploy_Lambda.yml
.github/workflows/: AWS_deploy.yml  ECS_deploy.yml  ECS_deploy_Lambda.yml
Deploy/: 4. AWS ECS Deployment.md  7. AWS ECS FTR.md  AWS ECS Deployment.md  AWS ECS FTR.md  AWS Lambda Deployment.md
_layouts/: default.html
api/: openapi.json
manifests/: reflectance_datacube_processor.yaml  reflectance_datacube_processor_svc.yaml
notebooks/: datacube-ag.ipynb  datacube-cloud_mask.ipynb  datacube-digital-agriculture.ipynb  datacube-explore.ipynb  datacube-simulated-dataset.ipynb  datacube-sustainable-practices.ipynb
src/: main.py  test.py
src/api/: api.py  constants.py
src/cloud_storage/: cloud_storage_aws.py  (+1 more)
terraform/: ECR.tf  Lambda.tf  aws_credentials.tfvars
(+14 files in other folders)
