[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "reflectance_datacube_processor"
version = "0.0.1"
description = ""
authors = [
 { name = "" }
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where =["src"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["line-too-long","broad-exception-caught","too-many-arguments"]

